<resources>
    <string name="app_name">Calendario Rosa</string>
    <string name="nomeEvento">Titulo*</string><![CDATA[>
    >
    ]]><string name="assunto">Assunto*</string>>
    <string name="descricao">Descrição (Opcional)</string><![CDATA[>
    >
    >
    ]]><string name="local">Local (Opcional)</string>>
    <string name="data">Data*</string>>
    <string name="time">Hora*</string>>

    <string-array name="Meses">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>>
    </string-array>
    >

    <string-array name="Semana">
        <item>Seg</item>>
        <item>Ter</item>>
        <item>Quar</item>>
        <item>Quin</item>>
        <item>Sex</item>>
        <item>Sab</item>>
        <item>Dom</item>>
    </string-array>

</resources>
