<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fillViewport="false"
    tools:context="com.example.aluno.calendario.FormAddLembretesActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="560dp"
        android:focusable="true"
        android:focusableInTouchMode="true">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="Adicionar um lembrete"
            android:textSize="20sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="24dp"
            app:counterEnabled="true"
            app:counterMaxLength="60"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:counterTextAppearance="@style/TextAppearance.Design.Counter"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            android:inputType="textEmailAddress|textMultiLine">

            <EditText
                android:id="@+id/txtTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="60"
                android:hint="@string/nomeEvento"
                android:maxLength="60" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginTop="10dp"
            app:counterEnabled="true"
            app:counterMaxLength="60"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:counterTextAppearance="@style/TextAppearance.Design.Counter"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/txtAssunto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="60"
                android:hint="@string/assunto"
                android:maxLength="60" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout2"
            android:layout_marginTop="12dp"
            app:counterEnabled="true"
            app:counterMaxLength="60"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:counterTextAppearance="@style/TextAppearance.Design.Counter"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/txtLocal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="60"
                android:hint="@string/local"
                android:maxLength="60" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/textInputLayout5"
            android:layout_alignStart="@+id/textInputLayout5"
            android:layout_below="@+id/textInputLayout3"
            android:layout_marginTop="18dp">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout5"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/btnPickData"
            android:layout_marginTop="18dp"
            app:errorTextAppearance="@style/error_appearance">

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/btnPickHora"
            android:layout_marginTop="19dp"
            app:counterEnabled="true"
            app:counterMaxLength="130"
            app:counterOverflowTextAppearance="@style/TextAppearance.Design.Counter.Overflow"
            app:counterTextAppearance="@style/TextAppearance.Design.Counter"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance">

            <EditText
                android:id="@+id/txtDescricao"
                android:layout_width="match_parent"
                android:layout_height="117dp"
                android:ems="130"
                android:gravity="top"
                android:hint="@string/descricao"
                android:inputType="text|textMultiLine"
                android:lines="4"
                android:maxLength="130"
                android:maxLines="4"
                android:overScrollMode="always"
                android:padding="15dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:background="@drawable/bordar"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnPickData"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textInputLayout4"
            android:layout_marginEnd="44dp"
            android:layout_toStartOf="@+id/lblData"
            android:background="@drawable/pickdate"
            android:text="" />

        <Button
            android:id="@+id/btnPickHora"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_alignStart="@+id/btnPickData"
            android:layout_alignTop="@+id/textInputLayout5"
            android:background="@drawable/picktime" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textInputLayout6"
            android:layout_alignStart="@+id/lblHora"
            android:text="(Horário à ser lembrado)" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#FFC0CB">

            <TextView

                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="Adicionar um lembrete"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/btnCancelar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="22dp"
                android:background="@drawable/close"
                android:textColor="#ffffff"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/btnApagar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignStart="@+id/btnCancelar"
                android:layout_alignTop="@+id/btnCancelar"
                android:background="@drawable/delete"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/btnSalvar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignTop="@+id/btnCancelar"
                android:layout_marginStart="28dp"
                android:layout_toEndOf="@+id/textView5"
                android:background="@drawable/check"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/btnEditar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignStart="@+id/btnSalvar"
                android:layout_centerVertical="true"
                android:background="@drawable/edit"
                android:textColor="#ffffff" />

        </RelativeLayout>

        <TextView
            android:id="@+id/lblData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBaseline="@+id/btnPickData"
            android:layout_alignBottom="@+id/btnPickData"
            android:layout_alignEnd="@+id/textView4"
            android:layout_alignStart="@+id/lblHora"
            android:text="@string/data"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/lblHora"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnPickHora"
            android:layout_alignBottom="@+id/btnPickHora"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="14dp"
            android:text="@string/time"
            android:textSize="23sp" />

    </RelativeLayout>

</ScrollView>
